[metadata]
name = threaded
project_urls =
    Bug Tracker = https://github.com/python-useful-helpers/threaded/issues
    Documentation = https://threaded.readthedocs.io/

[options]
zip_safe = False
packages = find:

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=0

[easy_install]
zip_ok = false

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[flake8]
exclude =
    .venv,
    .git,
    .tox,
    dist,
    doc,
    *lib/python*,
    *egg,
    build,
    __init__.py,
    docs
ignore =
show-source = True
count = True

[aliases]
test=pytest

[tool:pytest]
addopts = -vvv -s -p no:django -p no:ipdb
