[metadata]
name = threaded
project_urls =
  Bug Tracker = https://github.com/python-useful-helpers/threaded/issues
  Documentation = https://threaded.readthedocs.io/

[options]
zip_safe = False
packages = find:

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal = 0

[easy_install]
zip_ok = false

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[flake8]
exclude =
  .venv,
  .git,
  .tox,
  dist,
  doc,
  *lib/python*,
  *egg,
  build,
  __init__.py,
  docs
ignore =
# whitespace before ':'
  E203
# First line should be in imperative mood; try rephrasing
  D401,
# No blank lines allowed after function docstring
  D202,
# 1 blank line required before class docstring
  D203,
# Multi-line docstring summary should start at the second line
  D213
show-pep8 = True
show-source = True
count = True
max-line-length = 120

[pydocstyle]
ignore =
  # First line should be in imperative mood; try rephrasing
  D401,
  # No blank lines allowed after function docstring
  D202,
  # 1 blank line required before class docstring
  D203,
  # Multi-line docstring summary should start at the second line
  D213

[doc8]
max-line-length = 150

[aliases]
test = pytest
